--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
     <body>
         <main>
-        <hl> Sign Up </h1> 
+        <h1> Sign Up </h1>
+        
         First Name:  <input type="text" name="fName"><br>
         Last Name:   <input type="text" name="lName"><br>
         Gender:      <input type="radio" name="gender" value="m"> Male<br>
