--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title> Sign Up Page </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
     <body>
         <main>
@@ -41,7 +42,18 @@
             <br><br>
         </footer>
         <!-- closing footer -->
-        
+<script>
+    /*global $ */
+    // Displaying city from API after typing a zip code
+    $("#zip").on("change", async function() {
+        //alert($("#zip").val());
+        let zipCode = $("#zip").val();
+        let url = "https://itcdland.csumb.edu/~milara/ajax/cityInfoByZip?zip=${zipCode}";
+        let response = await fetch(url);
+        let data = await response.json();
+        console.log(data);
+    }); //zip    
+</script>
 </body>
 <!-- closing body -->
 </html>
