--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     $("#zip").on("change", async function() {
         //alert($("#zip").val());
         let zipCode = $("#zip").val();
-        let url = `https://itcdland.csumb.edu/~milara/ajax/cityInfoByZip?zip=${zipCode}`;
+        let url = `https://itcdland.csumb.edu/~milara/ajax/cityInfoByZip.php?zip=${zipCode}`;
         let response = await fetch(url);
         let data = await response.json();
         console.log(data);
