--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </footer>
         <!-- closing footer -->
 <script>
-    /*global $ */
+    /*global fetch $ */
     // Displaying city from API after typing a zip code
     $("#zip").on("change", async function() {
         //alert($("#zip").val());
@@ -51,7 +51,8 @@
         let url = `https://itcdland.csumb.edu/~milara/ajax/cityInfoByZip.php?zip=${zipCode}`;
         let response = await fetch(url);
         let data = await response.json();
-        console.log(data);
+        //console.log(data);
+        $("city").html(data.city);
     }); //zip    
 </script>
 </body>
