--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                      
         Zip Code:    <input type="text" id="zip" name="zip"><br>
         City:        <span id="city"></span><br>
-        Latitude:    <br>
-        Longitude:   <br><br>
+        Latitude:    <span id="latitude"></span><br>
+        Longitude:   <span id="longitude"></span><br><br>
   
         State:
         <select id="state" name="state">
@@ -53,6 +53,8 @@
         let data = await response.json();
         //console.log(data);
         $("city").html(data.city);
+        $("latitude").html(data.latitude);
+        $("longitude").html(data.longitude);
     }); //zip    
 </script>
 </body>
