--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         let response = await fetch(url);
         let data = await response.json();
         //console.log(data);
-        $("city").html(data.city);
-        $("latitude").html(data.latitude);
-        $("longitude").html(data.longitude);
+        $("#city").html(data.city);
+        $("#latitude").html(data.latitude);
+        $("#longitude").html(data.longitude);
     }); //zip    
 </script>
 </body>
